--- a/ModulProjekt/code/app/src/main/AndroidManifest.xml
+++ b/ModulProjekt/code/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         <activity android:name="ch.ny.detailsactivity.DetailsActivity"></activity>
         <activity android:name=".MainActivity">
         <activity android:name=".MainActivity"></activity>
-        <activity android:name=".SearchActivity">
+        <activity android:name="ch.ny.searchactivity.SearchActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
