--- a/ModulProjekt/code/app/build.gradle
+++ b/ModulProjekt/code/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:design:28.0.0'
 
-    //Tab dots
-    implementation 'com.chabbal:slidingdotsplash:1.0.2'
+    //For DB
+    implementation 'android.arch.persistence.room:runtime:1.0.0'
+    annotationProcessor 'android.arch.persistence.room:compiler:1.0.0'
 }
