--- a/ModulProjekt/code/app/build.gradle
+++ b/ModulProjekt/code/app/build.gradle
@@ -29,6 +29,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:design:28.0.0'
 
-    //Tab dots
-    implementation 'com.chabbal:slidingdotsplash:1.0.2'
+    //Ok Http
+    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
+
+    //GSON
+    implementation 'com.google.code.gson:gson:2.8.2'
 }
