--- a/ModulProjekt/code/app/build.gradle
+++ b/ModulProjekt/code/app/build.gradle
@@ -38,4 +38,5 @@ dependencies {
     //For DB
     implementation 'android.arch.persistence.room:runtime:1.0.0'
     annotationProcessor 'android.arch.persistence.room:compiler:1.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
 }
