--- a/ModulProjekt/code/app/src/main/AndroidManifest.xml
+++ b/ModulProjekt/code/app/src/main/AndroidManifest.xml
@@ -10,10 +10,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.NoActionBar">
+        android:theme="@style/Theme.AppCompat.NoActionBar"
+        android:fullBackupContent="@xml/backup_descriptor">
         <activity
             android:name="ch.ny.screens.detailsactivity.DetailsActivity"
-            android:screenOrientation="portrait"></activity>
+            android:screenOrientation="portrait" />
         <activity
             android:name="ch.ny.screens.searchactivity.SearchActivity"
             android:screenOrientation="portrait"></activity>
